2011-01-04  Denis Lila <dlila@redhat.com>

	Fixed RH661505.
	* NEWS: Updated with fix.
	* Makefile.am: Apply patch.
	* patches/661506-jpeg.patch: New file. Bug fix.

2011-01-04  Deepak Bhole <dbhole@redhat.com>

	Backport S6687968, S6541476, S6782079
	* Makefile.am: Add missing "\" to the patch list, update to include 
	new patches.
	* NEWS: Updated.
	* patches/openjdk/6687968-pngimagereader_mem_leak.patch: Backport to allow
	S6541476 fix to apply cleanly.
	* patches/openjdk/6541476-png-iTXt-chunk.patch: Backport to fix iTXt chunk
	handling for png images. Also addresses RH665355.
	* patches/openjdk/6782079-png_metadata_oom.patch: Backport to fix
	potential OOM error when reading metadata on truncated pngs.

2010-12-31  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (ICEDTEA_PATCHES): Add missing backslash.

2010-12-22  Jiri Vanek  <jvanek@redhat.com>

	* NEWS: Updated with rh.bugzilas.
	* patches/fonts-rhel.patch:repaired rhel 6 fonts configuration.

2010-12-21  Denis Lila  <dlila@redhat.com>

	Backport S6800846.
	* NEWS: Updated with fixes.
	* Makefile.am: Apply patch.
	* patches/openjdk/6800846-printing-quality.patch: New file. Backport
	of S6795356, and fix for RH662230.

2010-12-17  Denis Lila  <dlila@redhat.com>
			Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/rendering-engine-tests.patch:
	Improved the tests by using the rendering engine explicitly.

2010-12-16  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am: Add new patch.
	* patches/jtreg-TestXEmbedServer-fix.patch:
	Testcase correction - the test should also work on Gnome with upper
	panel displayed.

2010-12-14  Denis Lila  <dlila@redhar.com>, Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am: Add new patch.
	* patches/rendering-engine-tests.patch:
	Added new regression test used to check rendering engine behaviour.

2010-12-13  Denis Lila <dlila@redhat.com>

	Backport S6795356.
	* NEWS: Updated with fixes.
	* Makefile.am: Apply patch.