@@ -1,3 +1,13 @@
+2011-01-07  Andrew John Hughes  <ahughes@redhat.com>
+
+	* patches/jtreg-TestXEmbedServer-fix.patch:
+	Moved to...
+	* Makefile.am:
+	Fix path to above patch.  Only apply jtreg-6929067-fix.patch
+	when building hs19.
+	* patches/openjdk/6560348-jtreg-TestXEmbedServer-fix.patch:
+	... OpenJDK patch with appropriate bug ID.
+
 2011-01-04  Denis Lila <dlila@redhat.com>
 
 	Fixed RH661505.
